--- a/pages/early-development-school.html
+++ b/pages/early-development-school.html
@@ -561,8 +561,7 @@
                 <div class="my-container hero-section__container">
                     <div class="hero-section__body">
                         <div class="hero-section__body-texts">
-                            <div class="hero-section__title">Развивающие <br> занятия <br> «Семь&nbsp;Звёзд» <br>
-                                <span>В&nbsp;иркутске</span>
+                            <div class="hero-section__title">Развивающие <br> занятия <br> «Семь&nbsp;Звёзд» <br> <span>В&nbsp;иркутске</span>
                                 <div class="hero-section__location">
                                     <div class="hero-section__location-img">
                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -635,8 +634,7 @@
                                 </div>
                                 <div class="why-need-school__card-body">
                                     <div class="why-need-school__card-title --preLarge-texts">Социализация детей</div>
-                                    <div class="why-need-school__card-text --middle-texts">Получать социальные навыки, учиться
-                                        взаимодействовать со сверстниками и взрослыми</div>
+                                    <div class="why-need-school__card-text --middle-texts">Получать социальные навыки, учиться взаимодействовать со сверстниками и взрослыми</div>
                                 </div>
                             </div>
                         </div>
@@ -648,8 +646,7 @@
                                 </div>
                                 <div class="why-need-school__card-body">
                                     <div class="why-need-school__card-title --preLarge-texts">Эмоциональное развитие</div>
-                                    <div class="why-need-school__card-text --middle-texts">Развиваться эмоционально: учиться понимать
-                                        себя и окружающих, адекватно выражать свои чувства</div>
+                                    <div class="why-need-school__card-text --middle-texts">Развиваться эмоционально: учиться понимать себя и окружающих, адекватно выражать свои чувства</div>
                                 </div>
                             </div>
                         </div>
@@ -661,8 +658,7 @@
                                 </div>
                                 <div class="why-need-school__card-body">
                                     <div class="why-need-school__card-title --preLarge-texts">Развитие интеллекта</div>
-                                    <div class="why-need-school__card-text --middle-texts">Развиваться интеллектуально: стимулировать
-                                        мелкую моторику, внимание, мышление</div>
+                                    <div class="why-need-school__card-text --middle-texts">Развиваться интеллектуально: стимулировать мелкую моторику, внимание, мышление</div>
                                 </div>
                             </div>
                         </div>
@@ -674,8 +670,7 @@
                                 </div>
                                 <div class="why-need-school__card-body">
                                     <div class="why-need-school__card-title --preLarge-texts">Обучение важным навыкам</div>
-                                    <div class="why-need-school__card-text --middle-texts">Приобретать навыки, жизненно важные для
-                                        любого малыша и дошкольника</div>
+                                    <div class="why-need-school__card-text --middle-texts">Приобретать навыки, жизненно важные для любого малыша и дошкольника</div>
                                 </div>
                             </div>
                         </div>
@@ -686,15 +681,10 @@
                 data-advantageBlock-id="department-for-little">
                 <div class="my-container advantage-item__container">
                     <div class="advantage-item__desc">
-                        <div class="block-title advantage-item__desc__title">Отделение для&nbsp;самых маленьких&nbsp;—
-                            с&nbsp;9&nbsp;месяцев</div>
+                        <div class="block-title advantage-item__desc__title">Отделение для&nbsp;самых маленьких&nbsp;— с&nbsp;9&nbsp;месяцев</div>
                         <div class="advantage-item__desc-elements">
                             <div class="advantage-item__desc-pre-title --large-texts">Развиваем детей со&nbsp;всех&nbsp;сторон</div>
-                            <div class="advantage-item__desc-text --middle-texts">Занятия проходят в&nbsp;игровой форме
-                                и&nbsp;направлены на&nbsp;развитие познавательной деятельности, внимания, памяти,
-                                мышления, мелкой моторики рук, развитие речи. Это отличная возможность заложить базу для
-                                социализации ребенка в будущем. На первых занятиях для&nbsp;адаптации присутствует мама.
-                            </div>
+                            <div class="advantage-item__desc-text --middle-texts">Занятия проходят в&nbsp;игровой форме и&nbsp;направлены на&nbsp;развитие познавательной деятельности, внимания, памяти, мышления, мелкой моторики рук, развитие речи. Это отличная возможность заложить базу для социализации ребенка в будущем. На первых занятиях для&nbsp;адаптации присутствует мама.</div>
                             <div class="advantage-item__desc-buttons">
                                 <button class="my-button my-button_borderSquare advantage-item__desc-button">записаться</button>
                             </div>
@@ -745,8 +735,7 @@
                                 <div class="swiper-wrapper advantage-item__swiper-wrapper">
                                     <div class="swiper-slide advantage-item__swiper-slide">
                                         <div class="advantage-item__slide">
-                                            <div class="advantage-item__slide-title --preLarge-texts">Возрастные группы (разница в 3
-                                                месяца)</div>
+                                            <div class="advantage-item__slide-title --preLarge-texts">Возрастные группы (разница в 3 месяца)</div>
                                             <div class="advantage-item__slide-img-wrap">
                                                 <img loading="lazy" src="../assets/images/pages/early-development-school/department-for-little/slide-img-1.jpg"
                                                     alt="" class="advantage-item__slide-img">
@@ -764,8 +753,7 @@
                                     </div>
                                     <div class="swiper-slide advantage-item__swiper-slide">
                                         <div class="advantage-item__slide">
-                                            <div class="advantage-item__slide-title --preLarge-texts">Музыкальные и&nbsp;спортивные паузы
-                                            </div>
+                                            <div class="advantage-item__slide-title --preLarge-texts">Музыкальные и&nbsp;спортивные паузы</div>
                                             <div class="advantage-item__slide-img-wrap">
                                                 <img loading="lazy" src="../assets/images/pages/early-development-school/department-for-little/slide-img-3.jpg"
                                                     alt="" class="advantage-item__slide-img">
@@ -799,8 +787,7 @@
                     <h2 class="block-title child-age__title">От 3 до 5 лет</h2>
                     <div class="child-age__content">
                         <div class="child-age__content-inner">
-                            <div class="child-age__content-title --large-texts">Комплексные развивающие занятия проходят
-                                в&nbsp;игровой форме и включают в себя:</div>
+                            <div class="child-age__content-title --large-texts">Комплексные развивающие занятия проходят в&nbsp;игровой форме и включают в себя:</div>
                             <div class="child-age__slider">
                                 <div class="child-age__swiper-controls">
                                     <div class="swiper-pagination child-age__swiper-pagination"></div>
@@ -853,11 +840,8 @@
                                                     </a>
                                                 </div>
                                                 <div class="child-age__slide-body">
-                                                    <div class="child-age__slide-pre-title --preLarge-texts">Обогащение знаний
-                                                        об&nbsp;окружающем мире</div>
-                                                    <div class="child-age__slide-text --middle-texts">Развитие математических
-                                                        представлений, развитие мышления, памяти, слухового, зрительного
-                                                        внимания.</div>
+                                                    <div class="child-age__slide-pre-title --preLarge-texts">Обогащение знаний об&nbsp;окружающем мире</div>
+                                                    <div class="child-age__slide-text --middle-texts">Развитие математических представлений, развитие мышления, памяти, слухового, зрительного внимания.</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -871,10 +855,8 @@
                                                     </a>
                                                 </div>
                                                 <div class="child-age__slide-body">
-                                                    <div class="child-age__slide-pre-title --preLarge-texts">Обучение разным видам
-                                                        изобразительной деятельности</div>
-                                                    <div class="child-age__slide-text --middle-texts">Рисование, лепка, аппликация,
-                                                        нетрадиционные методики.</div>
+                                                    <div class="child-age__slide-pre-title --preLarge-texts">Обучение разным видам изобразительной деятельности</div>
+                                                    <div class="child-age__slide-text --middle-texts">Рисование, лепка, аппликация, нетрадиционные методики.</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -889,9 +871,7 @@
                                                 </div>
                                                 <div class="child-age__slide-body">
                                                     <div class="child-age__slide-pre-title --preLarge-texts">Игры-психогимнастики</div>
-                                                    <div class="child-age__slide-text --middle-texts">На развитие коммуникативных
-                                                        навыков, навыков сотрудничества, повышение уверенности,
-                                                        самооценки.</div>
+                                                    <div class="child-age__slide-text --middle-texts">На развитие коммуникативных навыков, навыков сотрудничества, повышение уверенности, самооценки.</div>
                                                 </div>
                                             </div>
                                         </div>
