--- a/pages/painting-education.html
+++ b/pages/painting-education.html
@@ -561,8 +561,7 @@
                 <div class="my-container hero-section__container">
                     <div class="hero-section__body">
                         <div class="hero-section__body-texts">
-                            <div class="hero-section__title">Обучение живописи <br> с&nbsp;пяти лет <br>
-                                <span>В&nbsp;иркутске</span>
+                            <div class="hero-section__title">Обучение живописи <br> с&nbsp;пяти лет <br> <span>В&nbsp;иркутске</span>
                                 <div class="hero-section__location">
                                     <div class="hero-section__location-img">
                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
