--- a/pages/summer-holidays.html
+++ b/pages/summer-holidays.html
@@ -904,14 +904,7 @@
                                         </div>
                                         <div class="simple-slider-section__slide-body">
                                             <div class="simple-slider-section__slide-title --preLarge-texts">«Парк Юрского Периода»</div>
-                                            <div class="simple-slider-section__slide-text --middle-texts">Удивительная жизнь
-                                                мультипликации и&nbsp;кинематографа. В этом мире возможно ВСЁ! Будем
-                                                изучать историю создания и&nbsp;познакомимся с миром&nbsp;будущего,
-                                                который нам предлагает эта индустрия. Немое кино, японская анимация
-                                                и&nbsp;любимые герои мультфильмов разных лет. Исследовательский подход
-                                                и&nbsp;безграничный полёт фантазии предлагают ребятам погрузиться
-                                                в&nbsp;проект и&nbsp;создать свой авторский продукт: короткометражный
-                                                фильм или&nbsp;мультфильм.</div>
+                                            <div class="simple-slider-section__slide-text --middle-texts">Удивительная жизнь мультипликации и&nbsp;кинематографа. В этом мире возможно ВСЁ! Будем изучать историю создания и&nbsp;познакомимся с миром&nbsp;будущего, который нам предлагает эта индустрия. Немое кино, японская анимация и&nbsp;любимые герои мультфильмов разных лет. Исследовательский подход и&nbsp;безграничный полёт фантазии предлагают ребятам погрузиться в&nbsp;проект и&nbsp;создать свой авторский продукт: короткометражный фильм или&nbsp;мультфильм.</div>
                                         </div>
                                     </div>
                                 </div>
@@ -923,16 +916,8 @@
                                             <div class="schedule__date --preMiddle-texts">17 – 28 июня</div>
                                         </div>
                                         <div class="simple-slider-section__slide-body">
-                                            <div class="simple-slider-section__slide-title --preLarge-texts">«Свет. Камера. Мотор!» +
-                                                <br> экономическая игра</div>
-                                            <div class="simple-slider-section__slide-text --middle-texts">Удивительная жизнь
-                                                мультипликации и&nbsp;кинематографа. В этом мире возможно ВСЁ! Будем
-                                                изучать историю создания и&nbsp;познакомимся с миром&nbsp;будущего,
-                                                который нам предлагает эта индустрия. Немое кино, японская анимация
-                                                и&nbsp;любимые герои мультфильмов разных лет. Исследовательский подход
-                                                и&nbsp;безграничный полёт фантазии предлагают ребятам погрузиться
-                                                в&nbsp;проект и&nbsp;создать свой авторский продукт: короткометражный
-                                                фильм или&nbsp;мультфильм.</div>
+                                            <div class="simple-slider-section__slide-title --preLarge-texts">«Свет. Камера. Мотор!» + <br> экономическая игра</div>
+                                            <div class="simple-slider-section__slide-text --middle-texts">Удивительная жизнь мультипликации и&nbsp;кинематографа. В этом мире возможно ВСЁ! Будем изучать историю создания и&nbsp;познакомимся с миром&nbsp;будущего, который нам предлагает эта индустрия. Немое кино, японская анимация и&nbsp;любимые герои мультфильмов разных лет. Исследовательский подход и&nbsp;безграничный полёт фантазии предлагают ребятам погрузиться в&nbsp;проект и&nbsp;создать свой авторский продукт: короткометражный фильм или&nbsp;мультфильм.</div>
                                         </div>
                                     </div>
                                 </div>
