--- a/pages/about.html
+++ b/pages/about.html
@@ -623,21 +623,11 @@
                     <div class="about-info__body">
                         <div class="block-title about-info__title">О нас</div>
                         <div class="about-info__texts --middle-texts">
-                            <p class="about-info__text">
-                                Детский сад “Семь Звёзд” был создан в 2007 году. Сегодня это уникальное образовательное
-                                пространство, которое вдохновляет детей на самостоятельное исследование и творчество. В
-                                наших садиках дети учатся не только через занятия, но и через общение, сотрудничество и
-                                взаимодействие с окружающей средой.
+                            <p class="about-info__text"> Детский сад “Семь Звёзд” был создан в 2007 году. Сегодня это уникальное образовательное пространство, которое вдохновляет детей на самостоятельное исследование и творчество. В наших садиках дети учатся не только через занятия, но и через общение, сотрудничество и взаимодействие с окружающей средой.
                             </p>
-                            <p class="about-info__text">
-                                Один из ключевых принципов реджио-подхода — это уважение к мнению каждого ребенка и
-                                создание условий для его самовыражения. Воспитатели выступают не только как учителя, но
-                                и как друзья, которые наблюдают, слушают и поддерживают детей в их стремлениях. Здесь
-                                ценится каждая идея, каждое открытие и каждая творческая работа.
+                            <p class="about-info__text"> Один из ключевых принципов реджио-подхода — это уважение к мнению каждого ребенка и создание условий для его самовыражения. Воспитатели выступают не только как учителя, но и как друзья, которые наблюдают, слушают и поддерживают детей в их стремлениях. Здесь ценится каждая идея, каждое открытие и каждая творческая работа.
                             </p>
-                            <p class="about-info__text">
-                                В детских садах “Семь Звёзд” дети сами создают себя как личность — а мы поддерживаем их
-                                во всем, помогаем и направляем.
+                            <p class="about-info__text"> В детских садах “Семь Звёзд” дети сами создают себя как личность — а мы поддерживаем их во всем, помогаем и направляем.
                             </p>
                         </div>
                         <button class="my-button my-button_noColor my-button_borderSquare about-info__button">узнать
@@ -887,14 +877,9 @@
                     <div class="avantage-descripion awards__description">
                         <h2 class="block-title avantage-descripion__title">Благодарности и&nbsp;награды</h2>
                         <div class="avantage-descripion__texts">
-                            <div class="avantage-descripion__pre-title --large-texts">За участие в общественных мероприятиях и вклад в
-                                развитие и воспитание детей</div>
-                            <p class="avantage-descripion__text --middle-texts">Мы понимаем, что родителям важно доверить образование
-                                детей проверенной организации, зарегистрированной во всех инстанциях. Все авторские
-                                методики, разработанные в центре, проходят государственную аттестацию и соответствуют
-                                всем образовательным стандартам.</p>
-                            <p class="avantage-descripion__text --middle-texts">Но мы не останавливаемся на достигнутом и стремимся как
-                                можно больше участвовать в развитии и воспитании детей в современном обществе. </p>
+                            <div class="avantage-descripion__pre-title --large-texts">За участие в общественных мероприятиях и вклад в развитие и воспитание детей</div>
+                            <p class="avantage-descripion__text --middle-texts">Мы понимаем, что родителям важно доверить образование детей проверенной организации, зарегистрированной во всех инстанциях. Все авторские методики, разработанные в центре, проходят государственную аттестацию и соответствуют всем образовательным стандартам.</p>
+                            <p class="avantage-descripion__text --middle-texts">Но мы не останавливаемся на достигнутом и стремимся как можно больше участвовать в развитии и воспитании детей в современном обществе.</p>
                         </div>
                     </div>
                     <div class="awards__slider">
