--- a/pages/summer-holidays.html
+++ b/pages/summer-holidays.html
@@ -687,9 +687,7 @@
                                     <div class="swiper-slide inspiration-section__swiper-slide">
                                         <div class="inspiration-section__slide --textImage_visible">
                                             <div class="inspiration-section__slide-number">01</div>
-                                            <div class="inspiration-section__slide-text --preLarge-texts">Творческие конкурсы
-                                                и&nbsp;мастер-классы
-                                            </div>
+                                            <div class="inspiration-section__slide-text --preLarge-texts">Творческие конкурсы и&nbsp;мастер-классы</div>
                                             <img loading="lazy" src="../assets/images/pages/main/inspiration/text-slides/text-slide-img-1.png"
                                                 alt="" class="inspiration-section__slide-text-img">
                                         </div>
@@ -825,8 +823,7 @@
                                     <div class="swiper-slide inspiration-section__swiper-slide">
                                         <div class="inspiration-section__slide --textImage_visible">
                                             <div class="inspiration-section__slide-number">08</div>
-                                            <div class="inspiration-section__slide-text --preLarge-texts">Встречи с&nbsp;интересными
-                                                людьми</div>
+                                            <div class="inspiration-section__slide-text --preLarge-texts">Встречи с&nbsp;интересными людьми</div>
                                             <img loading="lazy" src="../assets/images/pages/main/inspiration/text-slides/text-slide-img-8.png"
                                                 alt="" class="inspiration-section__slide-text-img">
                                         </div>
@@ -1012,17 +1009,11 @@
                 data-advantageBlock-id="educational-lessons" id="educational-lessons">
                 <div class="my-container advantage-item__container">
                     <div class="advantage-item__desc">
-                        <div class="block-title advantage-item__desc__title">Рродители <br> выбирают <br>
-                            «семь&nbsp;звезд»</div>
+                        <div class="block-title advantage-item__desc__title">Родители <br> выбирают <br> «семь&nbsp;звезд»</div>
                         <div class="advantage-item__desc-elements">
-                            <div class="advantage-item__desc-pre-title --large-texts">Обучение живописи детей приносит множество
-                                пользы как для творческого развития, так и для формирования важных жизненных навыков.
+                            <div class="advantage-item__desc-pre-title --large-texts">Обучение живописи детей приносит множество пользы как для творческого развития, так и для формирования важных жизненных навыков.
                             </div>
-                            <div class="advantage-item__desc-text --middle-texts">Как провести лето с пользой? Отправиться на отдых в
-                                центр детского развития “Семь Звезд”! Ваш ребёнок будет находиться в безопасной,
-                                комфортной, развивающей среде. Узнает много интересного, обретёт новых друзей и
-                                зарядится яркими и позитивными эмоциями! <br> Ежедневно публикуем фото и&nbsp;видео
-                                в&nbsp;Telegram&nbsp;— канале для&nbsp;родителей</div>
+                            <div class="advantage-item__desc-text --middle-texts">Как провести лето с пользой? Отправиться на отдых в центр детского развития “Семь Звезд”! Ваш ребёнок будет находиться в безопасной, комфортной, развивающей среде. Узнает много интересного, обретёт новых друзей и зарядится яркими и позитивными эмоциями! <br> Ежедневно публикуем фото и&nbsp;видео в&nbsp;Telegram&nbsp;— канале для&nbsp;родителей</div>
                             <div class="advantage-item__desc-buttons">
                                 <button
                                     class="my-button my-button_borderSquare advantage-item__desc-button">записаться</button>
@@ -1094,7 +1085,7 @@
                                             </div>
                                             <div class="advantage-item__slide-body">
                                                 <div class="advantage-item__slide-title --preLarge-texts">Стоимость абонемента</div>
-                                                <div class="advantage-item__slide-text --middle-texts">17v000&nbsp;₽/сезон <br> Питание
+                                                <div class="advantage-item__slide-text --middle-texts">17&nbsp;000&nbsp;₽/сезон <br> Питание
                                                     входит в&nbsp;стоимость</div>
                                             </div>
                                         </div>
