Правки и новая страница

--- a/pages/summer-holidays.html
+++ b/pages/summer-holidays.html
@@ -297,7 +297,7 @@
                                     </li>
                                     <li><a class="dropdown-item pre-mobile-menu__dropdown-item"
                                             href="./blog.html">Блог</a></li>
-                                    <li><a class="dropdown-item pre-mobile-menu__dropdown-item" href="#">Сведения...</a>
+                                    <li><a class="dropdown-item pre-mobile-menu__dropdown-item" href="./information-page.html">Сведения...</a>
                                     </li>
                                 </ul>
                             </div>
@@ -344,7 +344,7 @@
                             <li class="header__menu-item"><a href="./news.html" class="header__menu-link">Новости</a>
                             </li>
                             <li class="header__menu-item"><a href="./blog.html" class="header__menu-link">Блог</a></li>
-                            <li class="header__menu-item"><a href="#" class="header__menu-link">Сведения...</a></li>
+                            <li class="header__menu-item"><a href="./information-page.html" class="header__menu-link">Сведения...</a></li>
                         </ul>
                     </nav>
                     <div class="header__contacts">
@@ -472,7 +472,7 @@
                                         <li class="mobile-menu__link-item"><a href="./blog.html"
                                                 class="mobile-menu__link">Блог</a>
                                         </li>
-                                        <li class="mobile-menu__link-item"><a href="#"
+                                        <li class="mobile-menu__link-item"><a href="./information-page.html"
                                                 class="mobile-menu__link">Сведения...</a>
                                         </li>
                                     </ul>
@@ -1716,7 +1716,7 @@
                     <div class="footer__right">
                         <nav class="footer__menu --middle-texts">
                             <ul class="footer__menu-list">
-                                <li class="footer__menu-item"><a href="" class="footer__menu-link">Сведения об
+                                <li class="footer__menu-item"><a href="./information-page.html" class="footer__menu-link">Сведения об
                                         организации</a>
                                 </li>
                                 <li class="footer__menu-item"><a href="./about.html" class="footer__menu-link">О
