--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                                     </li>
                                     <li><a class="dropdown-item pre-mobile-menu__dropdown-item"
                                             href="./pages/blog.html">Блог</a></li>
-                                    <li><a class="dropdown-item pre-mobile-menu__dropdown-item" href="#">Сведения...</a>
+                                    <li><a class="dropdown-item pre-mobile-menu__dropdown-item" href="./pages/information-page.html">Сведения...</a>
                                     </li>
                                 </ul>
                             </div>
@@ -342,7 +342,7 @@
                             <li class="header__menu-item"><a href="./pages/news.html" class="header__menu-link">Новости</a>
                             </li>
                             <li class="header__menu-item"><a href="./pages/blog.html" class="header__menu-link">Блог</a></li>
-                            <li class="header__menu-item"><a href="#" class="header__menu-link">Сведения...</a></li>
+                            <li class="header__menu-item"><a href="./pages/information-page.html" class="header__menu-link">Сведения...</a></li>
                         </ul>
                     </nav>
                     <div class="header__contacts">
@@ -470,7 +470,7 @@
                                         <li class="mobile-menu__link-item"><a href="./pages/blog.html"
                                                 class="mobile-menu__link">Блог</a>
                                         </li>
-                                        <li class="mobile-menu__link-item"><a href="#"
+                                        <li class="mobile-menu__link-item"><a href="./pages/information-page.html"
                                                 class="mobile-menu__link">Сведения...</a>
                                         </li>
                                     </ul>
