Правки и новая страница

--- a/index.html
+++ b/index.html
@@ -3397,7 +3397,7 @@
                     <div class="footer__right">
                         <nav class="footer__menu --middle-texts">
                             <ul class="footer__menu-list">
-                                <li class="footer__menu-item"><a href="" class="footer__menu-link">Сведения об
+                                <li class="footer__menu-item"><a href="./pages/information-page.html" class="footer__menu-link">Сведения об
                                         организации</a>
                                 </li>
                                 <li class="footer__menu-item"><a href="./pages/about.html" class="footer__menu-link">О
