--- a/pages/information-page.html
+++ b/pages/information-page.html
@@ -924,10 +924,10 @@
                                     <p>
                                         В Учреждении формируются коллегиальные органы управления, к которым относятся:
                                     </p>
-                                    <ol>
+                                    <ul>
                                         <li>&nbsp;Общее собрание работников</li>
                                         <li>&nbsp;Педагогический совет</li>
-                                    </ol>
+                                    </ul>
                                     <p>
                                         Единоличным исполнительным органом Учреждения является директор, который
                                         осуществляет текущее руководство деятельностью Учреждения.
@@ -955,17 +955,106 @@
                                     data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
                                     aria-controls="collapseThree">
                                     <span
-                                        class="accordion-button-title info-parts__accordion-button-title --large-texts">Уютная
-                                        атмосфера</span>
+                                        class="accordion-button-title info-parts__accordion-button-title --large-texts">Документы</span>
                                 </button>
                             </h2>
                             <div id="collapseThree" class="accordion-collapse info-parts__accordion-collapse collapse"
                                 data-bs-parent="#accordionExample">
-                                <div class="accordion-body info-parts__accordion-body --middle-texts">
-                                    <p class="info-parts__accordion-text --middle-texts">Образовательная
-                                        деятельность в наших садах составлена в соответствии с ФГОС и программы
-                                        дошкольного образования «Вдохновение». Наша организация имеет все необходимые
-                                        документы.</p>
+                                <div class="accordion-body info-parts__accordion-body --middle-texts">																																									<h3>Устав ЧДОУ "ЦРДС "Семь звезд"</h3>
+<p>
+ <a href="https://7zvezd-irk.ru/files/uploads/files/%D0%A3%D1%81%D1%82%D0%B0%D0%B2.pdf">Открыть устав</a>
+</p>
+<h3>Лицензия на образовательную деятельность</h3>
+<p>
+ <a href="https://7zvezd-irk.ru/files/uploads/files/%D0%9B%D0%B8%D1%86%D0%B5%D0%BD%D0%B7%D0%B8%D1%8F.pdf">Открыть лицензию</a>
+</p>
+<h3>План финансово-хозяйственной деятельности организации</h3>
+<ul>
+	<li><a href="https://7zvezd-irk.ru/files/uploads/files/%D0%9F%D0%BB%D0%B0%D0%BD%20%D1%84%D0%B8%D0%BD%D0%B0%D0%BD%D1%81%D0%BE%D0%B2%D0%BE-%20%D1%85%D0%BE%D0%B7%D1%8F%D0%B8%CC%86%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D0%BE%D0%B8%CC%86%20%D0%B4%D0%B5%D1%8F%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D0%BE%D1%81%D1%82%D0%B8%20%D0%BD%D0%B0%202017%D0%B3.pdf">План финансово хозяйственной деятельности на 2017г.</a></li>
+	<li><a href="https://7zvezd-irk.ru/files/uploads/files/%D0%9F%D0%BB%D0%B0%D0%BD%20%D1%84%D0%B8%D0%BD%D0%B0%D0%BD%D1%81%D0%BE%D0%B2%D0%BE-%20%D1%85%D0%BE%D0%B7%D1%8F%D0%B8%CC%86%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D0%BE%D0%B8%CC%86%20%D0%B4%D0%B5%D1%8F%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D0%BE%D1%81%D1%82%D0%B8%20%D0%BD%D0%B0%202018%D0%B3.pdf">План финансово-хозяйственной деятельности на 2018г.</a></li>
+	<li><a href="https://7zvezd-irk.ru/files/uploads/files/plan19.pdf">План финансово-хозяйственной деятельности на 2019г.</a></li>
+	<li><a href="https://7zvezd-irk.ru/files/uploads/files/plan20.pdf">План финансово-хозяйственной деятельности на 2020г.</a></li>
+</ul>
+<h3>Локальные акты</h3>
+<ul>
+	<li><a href="https://7zvezd-irk.ru/files/uploads/files/%D0%9F%D1%80%D0%B0%D0%B2%D0%B8%D0%BB%D0%B0%20%D0%B2%D0%BD%D1%83%D1%82%D1%80%D0%B5%D0%BD%D0%BD%D0%B5%D0%B3%D0%BE%20%D1%82%D1%80%D1%83%D0%B4%D0%BE%D0%B2%D0%BE%D0%B3%D0%BE%20%D1%80%D0%B0%D1%81%D0%BF%D0%BE%D1%80%D1%8F%D0%B4%D0%BA%D0%B0.pdf">Правила внутреннего трудового распорядка</a></li>
+	<li><a href="https://7zvezd-irk.ru/files/uploads/files/%D0%9F%D1%80%D0%B0%D0%B2%D0%B8%D0%BB%D0%B0%20%D0%B2%D0%BD%D1%83%D1%82%D1%80%D0%B5%D0%BD%D0%BD%D0%B5%D0%B3%D0%BE%20%D1%80%D0%B0%D1%81%D0%BF%D0%BE%D1%80%D1%8F%D0%B4%D0%BA%D0%B0%20%D0%B2%D0%BE%D1%81%D0%BF%D0%B8%D1%82%D0%B0%D0%BD%D0%BD%D0%B8%D0%BA%D0%BE%D0%B2.pdf">Правила внутреннего распорядка воспитанников</a></li>
+	<li><a href="https://7zvezd-irk.ru/files/uploads/files/rezhim-rannego-vozrasta.pdf">Режим дня групп раннего возраста</a></li>
+	<li><a href="https://7zvezd-irk.ru/files/uploads/files/rezhim-doshkol.pdf">Режим дня групп дошкольного возраста</a></li>
+	<li><a href="https://7zvezd-irk.ru/files/uploads/files/%D0%9F%D1%80%D0%B0%D0%B2%D0%B8%D0%BB%D0%B0%20%D0%BF%D1%80%D0%B8%D0%B5%D0%BC%D0%B0%20%D0%B4%D0%B5%D1%82%D0%B5%D0%B8%CC%86%20%D0%BD%D0%B0%20%D0%BE%D0%B1%D1%83%D1%87%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%BF%D0%BE%20%D0%BE%D0%B1%D1%80%D0%B0%D0%B7%D0%BE%D0%B2%D0%B0%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D1%8B%D0%BC%20%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%B0%D0%BC.pdf">Правила приема на обучение по образовательным программам дошкольного образования</a></li>
+	<li><a href="https://7zvezd-irk.ru/files/uploads/files/poryadok-i-osnovania-perevoda.pdf">Порядок и основание перевода и отчисления воспитанников</a></li>
+	<li><a href="https://7zvezd-irk.ru/files/uploads/files/%D0%9F%D0%BE%D1%80%D1%8F%D0%B4%D0%BE%D0%BA%20%D0%BE%D1%84%D0%BE%D1%80%D0%BC%D0%BB%D0%B5%D0%BD%D0%B8%D1%8F%20%D0%B2%D0%BE%D0%B7%D0%BD%D0%B8%D0%BA%D0%BD%D0%BE%D0%B2%D0%B5%D0%BD%D0%B8%D1%8F%20%D0%B8%20%D0%BF%D1%80%D0%B5%D0%BA%D1%80%D0%B0%D1%89%D0%B5%D0%BD%D0%B8%D1%8F%20%D0%BE%D1%82%D0%BD%D0%BE%D1%88%D0%B5%D0%BD%D0%B8%D0%B8%CC%86.pdf">Порядок оформления возникновения и прекращения отношений между родителями и Учреждением</a></li>
+	<li><a href="https://7zvezd-irk.ru/files/uploads/files/polozhenie-o-komissii.pdf">Положение о комиссии по урегулированию споров между участниками образовательных отношений</a></li>
+	<li> <a href="https://7zvezd-irk.ru/files/uploads/files/kollektivniy-dogovor.pdf">Коллективный договор</a></li>
+	<li>
+	<p>
+	</p>
+ </li>
+	<li>
+	<p>
+ <a href="https://7zvezd-irk.ru/files/uploads/files/prikaz-o-zachislenii-vospitannika.pdf">Приказ о зачислении воспитанников</a>
+	</p>
+ </li>
+	<li>
+	<p>
+ <a href="https://7zvezd-irk.ru/files/uploads/files/2_%20%D0%9F%D1%80%D0%B8%D0%BA%D0%B0%D0%B7%20%D0%BE%D0%B1%20%D0%BE%D1%82%D1%87%D0%B8%D1%81%D0%BB%D0%B5%D0%BD%D0%B8%D0%B8%20%D0%B2%D0%BE%D1%81%D0%BF%D0%B8%D1%82%D0%B0%D0%BD%D0%BD%D0%B8%D0%BA%D0%B0.pdf">Приказ об отчислении воспитанников</a>
+	</p>
+ </li>
+	<li>
+	<p>
+ <a href="https://7zvezd-irk.ru/files/uploads/files/3_%20%D0%98%D0%BD%D1%84%D0%BE%D1%80%D0%BC%D0%B0%D1%86%D0%B8%D1%8F%20%D0%BE%20%D1%81%D1%80%D0%BE%D0%BA%D0%B0%D1%85%20%D0%BF%D1%80%D0%B8%D0%B5%D0%BC%D0%B0%20%D0%B4%D0%BE%D0%BA%D1%83%D0%BC%D0%B5%D0%BD%D1%82%D0%BE%D0%B2.pdf">Информация о сроках приема документов</a>
+	</p>
+ </li>
+	<p>
+ <a href="https://7zvezd-irk.ru/files/uploads/files/3_%20%D0%98%D0%BD%D1%84%D0%BE%D1%80%D0%BC%D0%B0%D1%86%D0%B8%D1%8F%20%D0%BE%20%D1%81%D1%80%D0%BE%D0%BA%D0%B0%D1%85%20%D0%BF%D1%80%D0%B8%D0%B5%D0%BC%D0%B0%20%D0%B4%D0%BE%D0%BA%D1%83%D0%BC%D0%B5%D0%BD%D1%82%D0%BE%D0%B2.pdf"></a>
+	</p>
+	<h3>Правила оказания платных услуг</h3>
+	<p>
+ <a href="https://7zvezd-irk.ru/files/uploads/files/pravila-okazania-platnih-yslug.pdf"></a>
+	</p>
+	<ul>
+		<li>
+		<p>
+ <a href="https://7zvezd-irk.ru/files/uploads/files/pravila-okazania-platnih-yslug.pdf">Открыть правила</a>
+		</p>
+ </li>
+		<li>
+		<p>
+ <a href="https://7zvezd-irk.ru/files/uploads/files/%D0%9E%D0%B1%D1%80%D0%B0%D0%B7%D0%B5%D1%86%20%D0%B7%D0%B0%D1%8F%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D1%8F%20%D0%BE%20%D0%BF%D1%80%D0%B8%D0%B5%D0%BC%D0%B5%20%20%D0%B2%20%D0%A3%D1%87%D1%80%D0%B5%D0%B6%D0%B4%D0%B5%D0%BD%D0%B8%D0%B5.pdf">Образец заявления</a>
+		</p>
+ </li>
+		<li>
+		<p>
+ <a href="https://7zvezd-irk.ru/files/uploads/files/4_%20%D0%94%D0%BE%D0%B3%D0%BE%D0%B2%D0%BE%D1%80%20%D0%BE%D0%B1%20%D0%BE%D0%B1%D1%80%D0%B0%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B8.pdf">Договор об образовании</a>
+		</p>
+ </li>
+		<li>
+		<p>
+ <a href="https://7zvezd-irk.ru/files/uploads/files/doc-plat-ysl.pdf">Документы об утверждении стоимости</a>
+		</p>
+ </li>
+		<li>
+		<p>
+ <a href="https://7zvezd-irk.ru/files/uploads/files/prikaz-plat-ycl.pdf">Приказ об оказании платных образовательных услуг</a>
+		</p>
+ </li>
+		<li>
+		<p>
+ <a href="https://7zvezd-irk.ru/files/uploads/files/raspisanie-7zvezd.jpg" target="_blank">Расписание платных образовательных услуг</a>
+		</p>
+ </li>
+	</ul>
+	<p>
+	</p>
+	<h3>Отчет о результатах сомообследования</h3>
+	<a href="/files/uploads/files/Самообследование%202021%20год.pdf">Отчет о результатах самообследования за 2021г</a><br>
+	<p>
+	</p>
+	<h3>Предписания органов, осуществляющих государственный контроль (надзор) в сфере образования, отчеты об исполнении таких предписаний:</h3>
+	<p>
+		 Проверка Службы по контролю и надзору в сфере образования Иркутской области. Дата проведения 01.03.2018 (плановая). Дата вынесения предписания 30.03.2018. Срок выполнения предписания 28.09.2018. На указанную дату предписание выполнено
+	</p>
+</ul>
                                 </div>
                             </div>
                         </div>
